styles nav -- desktop

--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
   </head>
 
   <body>
-    <header>
+    <header class="header">
       <nav>
         <div class="container">
-          <h1>
-            <a href="/index.html">Fun Bus</a>
-          </h1>
-          <ul>
+          <a href="/index.html"><h1>Fun Bus</h1></a>
+
+          <ul class="nav-links">
             <li><a href="#">Home</a></li>
             <li><a href="#">About Us</a></li>
             <li><a href="#">Blog</a></li>
