styles main-header

--- a/index.html
+++ b/index.html
@@ -31,20 +31,15 @@
           </ul>
         </div>
       </nav>
-      <section>
-        <div class="container">
-          <img
-            src="img/fun-bus.jpg"
-            alt="a small yellow bus on a sandy beach"
-          />
-          <h2>Welcome To Fun Bus!</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
-            reprehenderit illo veniam inventore dolorum accusantium. Obcaecati
-            incidunt consequuntur mollitia maxime magnam architecto delectus,
-            sapiente itaque doloremque facere quo esse molestiae.
-          </p>
-        </div>
+      <section class="main-header container">
+        <img src="img/fun-bus.jpg" alt="a small yellow bus on a sandy beach" />
+        <h2>Welcome To Fun Bus!</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
+          reprehenderit illo veniam inventore dolorum accusantium. Obcaecati
+          incidunt consequuntur mollitia maxime magnam architecto delectus,
+          sapiente itaque doloremque facere quo esse molestiae.
+        </p>
       </section>
     </header>
     <div class="container home">
