--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             WordPress Travel colorful webdesign. Traveler blogger website design
             expedition clean excursion traveling.
           </p>
-          <div class="btn">Sign Me Up!</div>
+          <button class="btn">Sign Me Up!</button>
         </div>
         <div class="destination">
           <h4>Mountain Excursion</h4>
@@ -107,7 +107,7 @@
             WordPress Travel colorful webdesign. Traveler blogger website design
             expedition clean excursion traveling.
           </p>
-          <div class="btn">Sign Me Up!</div>
+          <button class="btn">Sign Me Up!</button>
         </div>
         <div class="destination">
           <h4>Island Getaway</h4>
@@ -116,7 +116,7 @@
             WordPress Travel colorful webdesign. Traveler blogger website design
             expedition clean excursion traveling.
           </p>
-          <div class="btn">Sign Me Up!</div>
+          <button class="btn">Sign Me Up!</button>
         </div>
       </section>
     </div>
